<resources>
    <string name="app_name">AndroidERestaurant</string>

    <string name="entree_title">Entrées</string>
    <string name="plats_title">Plats</string>
    <string name="deserts_title">Desserts</string>
    <string name="ours">Nos</string>

    <string name="entree_menu_item">Entrées</string>
    <string name="plats_menu_item">Plats</string>
    <string name="deserts_menu_item">Desserts</string>

    <string name="known_as">Known as: </string>
    <string name="dish_name_default">Les Lasagnes</string>
    <string name="from_price">Prix : </string>
    <string name="euros">€</string>

    <string name="logo_description">Logo principale</string>
    <string name="entree_description">Voir nos Entrées</string>
    <string name="plats_description">Voir nos Plats</string>
    <string name="deserts_description">Voir nos Desserts</string>
    <string name="divider_description">Diviseur</string>

    <string name="description_generale">Dans les lasagnes, il faut des pâtes, de la sauce tomate, de la viande hachée et plein de petits légumes</string>

    <string name="total2">Total :</string>
    <string name="quantity_text">Quantité :</string>
    <string name="order">Commander</string>
    <string name="dish_description">Image du plat</string>

    <string name="basket">Panier</string>
    <string name="preference_file_key">fr.isen.prezut.androiderestaurant.preferences</string>
    <string name="deleted_order">Commande annulée</string>
    <string name="order_saved">Commande sauvegardée</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="qt">1</string>
    <string name="cmd">Commander</string>
    <string name="titleCart">Résumé de votre commande :</string>
    <string name="cart">cart</string>
    <string name="iconcart">IconCart</string>
    <string name="nb">nb</string>

    <string name="title_sign_up">Devenir un Glouton</string>
    <string name="submit_sign_up">Créer</string>
    <string name="submit_sign_in">Se connecter</string>
    <string name="label_name">Votre nom</string>
    <string name="label_lastname">Votre prénom</string>
    <string name="label_address">Votre adresse</string>
    <string name="label_email">Votre email</string>
    <string name="no_account">Devenir un Glouton</string>
    <string name="have_account">Déjà un Glouton</string>
    <string name="label_password">Votre mot de passe</string>
    <string name="error_email_non_valid">L\'email n\'est pas valide !</string>
    <string name="error_empty">Ne peux pas être vide !</string>
    <string name="error_exist">Ce champ existe déja !</string>
    <string name="error_at_least_one_number">Doit contenir au moins un nombre !</string>
    <string name="error_at_least_one_uppercase">Doit contenir au moins une lettre en majuscule !</string>
    <string name="error_length_prefix">Doit contenir </string>
    <string name="error_length_suffix"> lettres !</string>
    <string name="error_at_least_one_special">Doit contenir au moins une lettre spécial !</string>

    <string name="title_sign_in">Se connecter</string>
    <string name="remind_me">Rester connecté</string>

    <string name="action_log_in">Se connecter</string>
    <string name="action_log_out">Se déconnecter</string>
    <string name="action_my_account">Mon compte</string>

    <string name="fileName">qtCart</string>
</resources>